--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="product">
-        <img src="Lamp 1.jpg" alt="Product 2">
+        <img src="lamp1.jpg" alt="Product 2">
         <h3><a href='#'>Traditional Lamp</h3>
         <p>$50.00</p>
       </div>
@@ -75,3 +75,4 @@
   </footer>
 </body>
 </html>
+
