--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
       At JDS Lighting Repair, we provide expert repair, restoration, and fabrication services for antique and vintage lighting fixtures. Whether you have a cherished family heirloom or a unique market find, our skilled craftsmanship ensures your lighting is both beautiful and safe.
     </p>
     <section class="service">
-      <img src="Antique Lighting Restoration.jpg" alt="Antique Lighting Restoration">
+      <img src="Antique Lighting Restoration.JPG" alt="Antique Lighting Restoration">
     <h2>Antique Lighting Restoration</h2>
     <p>We carefully restore vintage and antique lighting fixtures, preserving their original character while updating them to meet modern safety standards.</p>
     </section>
@@ -56,4 +56,5 @@
     <p>&copy; 2025 JDS Lighting Repair. All rights reserved.</p>
   </footer>
 </body>
+
 </html>
