--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
     </section>
 
     <section class="service">
-      <img src="Custom Fabrication.jpg" alt="Custom Fabrication">
+      <img src="Custom-Fabrication.JPG" alt="Custom Fabrication">
     <h2>Custom Fabrication</h2>
     <p>From replacement parts to custom-designed fixtures, we create high-quality components to match the style and craftsmanship of your existing lighting.</p>
     </section>
@@ -58,4 +58,5 @@
 </body>
 
 </html>
+
 
