--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
     </section>
 
     <section class="service">
-      <img src="Electrical Rewiring.jpg" alt="Electrical Rewiring">
+      <img src="Electrical-Rewiring.JPG" alt="Electrical Rewiring">
     <h2>Electrical Rewiring</h2>
     <p>We rewire antique fixtures using modern UL-listed wiring and components, ensuring your lights are safe and functional without compromising their look.</p>
     </section>
@@ -58,5 +58,6 @@
 </body>
 
 </html>
+
 
 
