--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="overlay-text">Fabrication</div>
   </div>
   <div class="image-overlay">
-    <img src="lighting.jpg" alt="Lighting Repair">
+    <img src="lighting.JPG" alt="Lighting Repair">
     <div class="overlay-text">Lighting Repair</div>
   </div>
 </section>
@@ -48,3 +48,4 @@
   </footer>
 </body>
 </html>
+
