--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
     <section class="image-overlay-section">
   <div class="image-overlay">
-    <img src="lamp.jpg" alt="Basic Wiring">
+    <img src="lamp.JPG" alt="Basic Wiring">
     <div class="overlay-text">Basic Wiring</div>
   </div>
   <div class="image-overlay">
-    <img src="custom.jpg" alt="Fabrication">
+    <img src="custom.JPG" alt="Fabrication">
     <div class="overlay-text">Fabrication</div>
   </div>
   <div class="image-overlay">
@@ -48,4 +48,5 @@
   </footer>
 </body>
 </html>
+
 
