--- a/products.html
+++ b/products.html
@@ -31,37 +31,37 @@
 
     <div class="product-grid">
       <div class="product">
-        <img src="Product 1.jpg" alt="Product 1">
+        <img src="Product1.JPG" alt="Product 1">
         <h3><a href='#'>6 Light Crystal Chandelier</h3>
         <p>$400.00</p>
       </div>
 
       <div class="product">
-        <img src="Product 2.jpg" alt="Product 2">
+        <img src="Product2.JPG" alt="Product 2">
         <h3><a href='#'>4 Light Crystal Chandelier</h3>
         <p>$400.00</p>
       </div>
 
       <div class="product">
-        <img src="Custom Fabrication.jpg" alt="Product 2">
+        <img src="Custom-Fabrication.JPG" alt="Product 2">
         <h3><a href='#'>Jack Daniel's Lamp</h3>
         <p>$50.00</p>
       </div>
 
       <div class="product">
-        <img src="lamp1.jpg" alt="Product 2">
+        <img src="Lamp1.JPG" alt="Product 2">
         <h3><a href='#'>Traditional Lamp</h3>
         <p>$50.00</p>
       </div>
 
       <div class="product">
-        <img src="Lamp 2.jpg" alt="Product 2">
+        <img src="Lamp2.JPG" alt="Product 2">
         <h3><a href='#'>Gothic Lamp</h3>
         <p>$50.00</p>
       </div>
 
       <div class="product">
-        <img src="Lamp 3.jpg" alt="Product 2">
+        <img src="Lamp3.JPG" alt="Product 2">
         <h3><a href='#'>Animal Print Lamp</h3>
         <p>$40.00</p>
       </div>
@@ -75,4 +75,5 @@
   </footer>
 </body>
 </html>
+
 
